--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.43.1",
     "drizzle-kit": "^0.31.0",
+    "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.15.6",
     "ws": "^8.18.1"
